--- a/src/components/CVForm/CVForm.scss
+++ b/src/components/CVForm/CVForm.scss
@@ -1,5 +1,6 @@
 @use "../../styles/variables" as *;
 @use "src/styles/fonts" as *;
+@use "src/styles/mixins" as *;
 
 .form-input-container {
   padding: 1rem;
@@ -7,6 +8,11 @@
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
+  @include tablet {
+    @include tablet-padding;
+    padding-top: $tab-pad-ver;
+    padding-bottom: $tab-pad-ver;
+  }
 
   &__form {
     display: flex;
