--- a/src/components/DisplayCV/DisplayCV.scss
+++ b/src/components/DisplayCV/DisplayCV.scss
@@ -1,33 +1,57 @@
 @use "../../styles/variables" as *;
 @use "../../styles/fonts" as *;
+@use "../../styles/mixins" as *;
 
 .vitae-container {
   font-family: $Garamond;
   margin: $mob-hor-pad;
   background-color: #fff;
+  @include tablet {
+    @include tablet-margin;
+    margin-top: $tab-pad-ver;
+    margin-bottom: $tab-pad-ver;
+  }
 }
 
 .vitae-header {
   padding: 1rem;
   background-color: #131313;
   color: #fff;
+  @include tablet {
+    padding-left: $cv-hor-pad;
+    padding-right: $cv-hor-pad;
+    display: flex;
+    justify-content: space-between;
+  }
 
   &__flex-wrapper {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
+    @include tablet {
+      align-items: flex-start;
+    }
   }
 
   &__title {
     font-size: 1.5rem;
     font-weight: 600;
+    @include tablet {
+      font-size: 2.75rem;
+    }
   }
 
   &__text {
     font-size: 1rem;
+    @include tablet {
+      font-size: 1.125rem;
+    }
 
     &--big {
       font-size: 1.375rem;
+      @include tablet {
+        font-size: 2rem;
+      }
     }
   }
 }
@@ -37,6 +61,10 @@
   display: flex;
   flex-direction: column;
   gap: 1rem 0;
+  @include tablet {
+    padding-left: $cv-hor-pad;
+    padding-right: $cv-hor-pad;
+  }
 
   &--top-pad {
     padding-top: 2.25rem;
@@ -63,5 +91,14 @@
 
   &__bullet {
     display: inline;
+    @include tablet {
+      font-size: 1.125rem;
+    }
+  }
+
+  &--bot-pad {
+    @include tablet {
+      padding-bottom: 2.25rem;
+    }
   }
 }
