--- a/src/components/InfoWrapper/InfoWrapper.scss
+++ b/src/components/InfoWrapper/InfoWrapper.scss
@@ -1,8 +1,23 @@
+@use "../../styles/mixins" as *;
+
 .info-wrapper {
   display: flex;
   justify-content: space-between;
 
   &__title {
-    font-size: 1.125rem;
+    font-size: 1.0625rem;
+    @include tablet {
+      font-size: 1.5rem;
+    }
+  }
+
+  &__text {
+    @include tablet {
+      font-size: 1.125rem;
+    }
+
+    &--bold {
+      font-weight: 600;
+    }
   }
 }
