--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -9,3 +9,19 @@
   border-radius: 0.5rem;
   cursor: pointer;
 }
+
+@mixin tablet {
+  @media (min-width: 768px) {
+    @content;
+  }
+}
+
+@mixin tablet-padding {
+  padding-left: 3.75rem;
+  padding-right: 3.75rem;
+}
+
+@mixin tablet-margin {
+  margin-left: 3.75rem;
+  margin-right: 3.75rem;
+}
