--- a/src/components/DisplayCV/DisplayCV.scss
+++ b/src/components/DisplayCV/DisplayCV.scss
@@ -11,6 +11,10 @@
     margin-top: $tab-pad-ver;
     margin-bottom: $tab-pad-ver;
   }
+  @include desktop {
+    width: 48rem;
+    height: 60rem;
+  }
 }
 
 .vitae-header {
@@ -72,6 +76,7 @@
 
   &__title {
     font-size: 1.375rem;
+    font-style: italic;
   }
 
   &__text {
