--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -16,6 +16,12 @@
   }
 }
 
+@mixin desktop {
+  @media (min-width: 1280px) {
+    @content;
+  }
+}
+
 @mixin tablet-padding {
   padding-left: 3.75rem;
   padding-right: 3.75rem;
