--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -2,45 +2,45 @@
 
 @font-face {
   font-family: $Bebas;
-  src: url("src/assets/fonts/BebasNeue-Regular.ttf") format("truetype");
+  src: url("./assets/fonts/BebasNeue-Regular.ttf") format("truetype");
 }
 
 @font-face {
   font-family: $Roboto;
-  src: url("src/assets/fonts/Roboto-Regular.ttf") format("truetype");
+  src: url("./assets/fonts/Roboto-Regular.ttf") format("truetype");
 }
 
 @font-face {
   font-family: $Roboto;
-  src: url("src/assets/fonts/Roboto-Medium.ttf") format("truetype");
+  src: url("./assets/fonts/Roboto-Medium.ttf") format("truetype");
   font-weight: 500;
 }
 
 @font-face {
   font-family: $Oswald;
-  src: url("src/assets/fonts/Oswald-Regular.ttf") format("truetype");
+  src: url("./assets/fonts/Oswald-Regular.ttf") format("truetype");
 }
 
 @font-face {
   font-family: $Oswald;
-  src: url("src/assets/fonts/Oswald-SemiBold.ttf") format("truetype");
+  src: url("./assets/fonts/Oswald-SemiBold.ttf") format("truetype");
   font-weight: 500;
 }
 
 @font-face {
   font-family: $Garamond;
-  src: url("src/assets/fonts/EBGaramond-Regular.ttf") format("truetype");
+  src: url("./assets/fonts/EBGaramond-Regular.ttf") format("truetype");
   font-weight: 400;
 }
 
 @font-face {
   font-family: $Garamond;
-  src: url("src/assets/fonts/EBGaramond-Medium.ttf") format("truetype");
+  src: url("./assets/fonts/EBGaramond-Medium.ttf") format("truetype");
   font-weight: 500;
 }
 
 @font-face {
   font-family: $Garamond;
-  src: url("src/assets/fonts/EBGaramond-Bold.ttf") format("truetype");
+  src: url("./assets/fonts/EBGaramond-Bold.ttf") format("truetype");
   font-weight: 600;
 }
