Create mixin for add and save buttons

--- a/src/components/AddSectionBtn/AddSectionBtn.scss
+++ b/src/components/AddSectionBtn/AddSectionBtn.scss
@@ -1,12 +1,8 @@
 @use "../../styles/mixins" as *;
 
 .add-section-btn {
-  @include btn-style;
-  width: 8.75rem;
-  background-color: #5c4c05;
-  border: 2px solid #806900;
-  color: #fff;
+  @include add-save-btns;
   &:hover {
-    background-color: #7c6708;
+    @include add-save-hover;
   }
 }
