--- a/src/App.scss
+++ b/src/App.scss
@@ -43,21 +43,28 @@ a {
       font-size: 4rem;
       text-align: left;
       @include tablet-padding;
+      @include desktop-width-rules;
     }
   }
 }
 
-.toolbar {
+.toolbar-wrapper {
   background-color: $header-nav-colors;
+  border-bottom: 1px solid #000;
+}
+
+.toolbar {
   display: flex;
   justify-content: flex-end;
   gap: 0.5rem;
-  border-bottom: 1px solid #000;
   padding: 0.5rem $mob-hor-pad;
   position: sticky;
   top: 0px;
   @include tablet {
     @include tablet-padding;
+  }
+  @include desktop {
+    @include desktop-width-rules;
   }
 
   &__btn {
