--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -5,7 +5,6 @@
   font-weight: 500;
   padding: 0.5rem;
   font-size: 1rem;
-  font-weight: 500;
   border-radius: 0.5rem;
   cursor: pointer;
 }
@@ -42,4 +41,9 @@
 @mixin tablet-margin {
   margin-left: 3.75rem;
   margin-right: 3.75rem;
+}
+
+@mixin desktop-width-rules {
+  max-width: 80rem;
+  margin: 0 auto;
 }
